fix contrast .topImage

--- a/css/styles.css
+++ b/css/styles.css
@@ -115,6 +115,7 @@ ul{
 	position:relative;
     text-align: right;
     color: black;
+    background-color: black;
     margin-top: 3rem;
     background-color:black;
 }
